2020-12-17  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (popup-menu*, diredc-browse-mode-map)
	(diredc-trash-info, diredc-shell--launch-eshell)
	(diredc--advice--dired-internal-noselect):  definition changes in
	order to avoid 	byte-compiler warnings.

2020-12-08  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--create-keymap): Change keybindings of
	bookmark commands to use C-c + prefix

2020-12-06  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--create-keymap): Change keybinding of
	diredc-show-more-info to C-c ?.
	(diredc-mode-map): Change to defvar to allow user over-ride.

2020-11-09  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--decode-hexlated-string): Replace algortihm
	with one based upon eww and Eli Zaretskii suggestion.
	(diredc-hist-up-directory, diredc-recover): Rename dotimes
	iterator to avoid compiler warnings.

2020-11-06  Boruch Baum  <boruch_baum@gmx.com>

	(diredc--decode-hexlated-string): New function to handled unicode
	and multibyte hexlated file names.
	(diredc-trash-restore): Use the new function.

2020-11-06  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc): Ensure focus for new frame.

2020-11-05  Michael Albinus <michael.albinus@gmx.de>

	* diredc.el (diredc-trash-restore): Unhexlate file restore paths
	[partial fix to github issue #5]

2020-11-05  Boruch Baum  <@gmx.com>

	* diredc.el (diredc-trash-restore): Catch error in malformed
	metadata.

2020-11-05  Shohei YOSHIDA <syohex@gmail.com>

	* diredc.el, README.md: Fix typos

2020-11-05  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse--hook-function)
	(diredc--file-name-at-point, diredc--show-more-file-info)
	(diredc-exit, diredc): Remove unused VARs from condition-case
	statements.

2020-11-04  Joost Kremers <joostkremers@fastmail.fm>

	* diredc.el (diredc): Add autoload cookie.